# Project3_The-Kirkwood-gaps

./: .gitignore  README.md
codes/: README.md  try_data.jld2
codes/Parallel_Asteriods/: CMakeLists.txt  Hamilton.cpp  Hamilton.h  IV2019-06-04-09-07-[n=50000,year=3000].txt  the_asteroids.cpp
codes/Parallel_Asteroids/: CMakeLists.txt  Hamilton.cpp  Hamilton.h  hist.py  the_asteroids.cpp
codes/ariod/: CMakeLists.txt  Hamilton.cpp  Hamilton.h  the_asteroids.cpp
codes/oldcodes/Julia/: the_jupyter.jl
codes/oldcodes/ariod/: CMakeLists.txt  Hamilton.h
results/: DATA2019-06-05-23-03-[n=20000,year=2000].txt  DATA5-29-1144-[(2000)_(1000)].txt  DATA5-29-1210-[(2000)_(20000)].txt  DATA5-29-1619-[(1000)_(100000)].txt  DATA5-29-1640-[(2000)_(100000)]pi.txt  DATA5-29-852-[(2000)_(20000)].txt  DATA5-30-1720-[(2000)_(100000)]randangle.txt  DATA5-31-76-[(2000)_(100000)]randangle.txt  DATA6-2-171-[(2000)_(4000)]randangle.txt  DATA6-3-150-[(3000)_(50000)]randangle.txt  IV5-29-1144-[(2000)_(1000)].txt  IV5-29-1210-[(2000)_(20000)].txt  IV5-29-1640-[(2000)_(100000)]pi.txt  IV5-29-852-[(2000)_(20000)].txt  IV5-30-1720-[(2000)_(100000)]randangle.txt  IV6-3-150-[(3000)_(50000)]randangle.txt  README.md  alldata.txt  alliv.txt  copydata.bat  copyini.bat  hist.py
results/pi2/: DATA5-29-175-[(2000)_(100000)]pi2.txt  IV5-29-1619-[(1000)_(100000)].txt  IV5-29-175-[(2000)_(100000)]pi2.txt
results/sample_data/: hist.py
